texte, liens et logo Partenaires

--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -145,3 +145,12 @@ hr {
 .newsletter p {
   font-size: 13px;
 }
+
+.img-fit {
+  object-fit: scale-down;
+  height: 100px;
+}
+
+.space-around {
+  justify-content: space-around
+}
