--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
 
     <%= link_to "/partenaires" do %>
       <div class="d-flex flex-column justify-content-center align-items-center mx-3 my-3 ekolo-margin">
-        <div>Qui sommes-nous ?</div>
+        <div class="mb-1">Qui sommes-nous ?</div>
         <div>
           <%= image_tag "ekologeek.png", width: 129, id:"logo-footer" %>
         </div>
