raccourci le carousel time et amélioré la responsivité bouton partenaire

--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="call-action">
-          <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-primary" %>
+          <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-primary smaller-font" %>
         </div>
       </div>
     </div>
