anchors foireuses + petites modifs

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class=" footer d-flex flex-column flex-lg-row align-items-center p-3 text-white">
 
     <%= link_to "/partenaires" do %>
-      <div class="d-flex flex-column justify-content-center align-items-center mx-3 my-3 ekolo-margin">
+      <div class="d-flex flex-column justify-content-center align-items-center mx-3 ekolo-margin">
         <div class="mb-1">Qui sommes-nous ?</div>
         <div>
           <%= image_tag "ekologeek.png", width: 129, id:"logo-footer" %>
