réduit le padding du container en version mobile

--- a/app/stylesheets/components/_custom-container.scss
+++ b/app/stylesheets/components/_custom-container.scss
@@ -17,3 +17,12 @@
   max-width: 800px;
   margin: auto;
 }
+
+.container-padding {
+  padding: 0 48px !important;
+
+  @media (max-width: $mobile) {
+    padding: 0 25px !important;
+  }
+
+}
