--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="container bg-white px-5 my-5">
+  <div class="container bg-white my-5 container-padding">
     <div id="comment1"></div>
     <h1 class="header text-primary text-center pt-5 mt-5 mb-0">Comment</h1>
     <div class="header-padding-comment" >
