--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="container bg-white px-5 my-5 blue">
+  <div class="container bg-white container-padding my-5 blue">
     <h2 class="my-5 pt-5 text-center"><b>Objectif:</b> réduire vos déchets de fonctionnement de 10%</h2>
 
     <div class="row">
