--- a/app/views/pages/inscription.html.erb
+++ b/app/views/pages/inscription.html.erb
@@ -1,7 +1,7 @@
 
 <div class="wrapper">
   <div class="container">
-    <div class="container-inscription bg-white px-5 my-5">
+    <div class="container-inscription bg-white container-padding my-5">
       <h1 class="header text-primary text-center pt-5 mt-5">S'inscrire</h1>
       <h2 class="mt-5 mb-4 green-bg">Bordeaux Métropole</h2>
       <div class="row">
