--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="container">
-    <div class="container-ekologeek bg-white px-5 my-5">
+    <div class="container-ekologeek bg-white container-padding my-5">
       <h2 class="header text-primary text-center pt-5 mt-5">Ekolo[geek]</h2>
       <h4 class="mb-5 text-center">Le Défi Zéro Déchet des Pro est porté par l'<%= link_to "association Ekolo[geek]", "http://www.ekologeek.com", target: :blank  %></h4>
 
