--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div id="soutenir1"></div>
     <div id="soutenir4"></div>
-    <div class="container-soutenir bg-white px-5 my-5">
+    <div class="container-soutenir bg-white container-padding my-5">
       <h1 class="header text-primary text-center mt-5 pt-5">Soutenir</h1>
       <h4 class="text-center"> Le Défi Zéro Déchet des pro est porté par une association. Il a besoin de vous pour être mis en œuvre ! </h4>
 
