font carousel text

--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag "gestion.jpg", class:"d-block w-100", alt:"First slide" %>
       <div class="carousel-caption">
         <%= link_to "/pourquoi", class:"btn btn-secondary text-white responsive-btn box" do %>
-        <h5>140kg de déchets par bureau</h5>
+        <h5><b>140kg de déchets par bureau</b></h5>
         <p class="mb-0">C'est trop pour vous ?</p>
         <% end %>
       </div>
@@ -14,7 +14,7 @@
       <div class="carousel-caption">
         <div class="d-md-block">
           <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn box" do %>
-          <h5>Le Défi a besoin de vous !</h5>
+          <h5><b>Le Défi a besoin de vous !</b></h5>
           <p class="mb-0">Soutenez le projet</p>
           <% end %>
         </div>
@@ -24,7 +24,7 @@
       <%= image_tag "mobilisation.jpg", class:"d-block w-100", alt:"Third slide" %>
       <div class="carousel-caption d-md-block">
         <%= link_to "/comment", class:"btn btn-secondary text-white responsive-btn box" do %>
-        <h5>Relevez le Défi ! </h5>
+        <h5><b>Relevez le Défi !</b> </h5>
         <p class="mb-0">Réduisez vos déchets de 10%</p>
         <% end %>
       </div>
