--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  height: 45px;
+  height: 55px;
   z-index: 9;
   transition: height 0.3s ease-out;
   -webkit-transition: height 0.3s ease-out;
@@ -16,7 +16,7 @@
 
   .navbar-collapse {
     background: $primary;
-    height: 45px;
+    height: 55px;
     @media (max-width: $tablet) {
       height: auto;
     }
@@ -26,7 +26,7 @@
   }
   .home-nav-link {
     color: $light-gray;
-    font-size: 15px;
+    font-size: 26px;
   }
   .logo-nav {
     background-image: image("logo.jpg");
@@ -72,7 +72,8 @@
       color: white;
     }
     .home {
-      margin-top: 5px;
+      margin-top: -7px;
+      height: 20px;
     }
 
     #logo {
@@ -105,7 +106,7 @@
 
 .navbar-secondary {
   position: sticky;
-  top: 76px;
+  top: 80px;
   left: 30px;
   z-index: 11;
    svg {
@@ -119,11 +120,11 @@
   }
   @media (max-width: $tablet) {
     position: sticky;
-    top: 47px;
+    top: 50px;
     left: 10px;
   }
   .logo-nav-secondary {
-    width: 100px;
+    width: 150px;
   }
 }
 .navbar-logo {
@@ -138,5 +139,20 @@
     position: fixed;
     top: 0;
     right: 10px;
+  }
+}
+.position {
+  position: relative;
+}
+
+.borderus:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 10px;
+  border-left: 1px solid white;
+  bottom: 10px;
+  @media (max-width: $desktop) {
+    display: none;
   }
 }
