--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -118,13 +118,21 @@
       width: 50px;
     }
   }
-  @media (max-width: $tablet) {
+  @media (max-width: 991px) {
     position: sticky;
     top: 50px;
     left: 10px;
   }
   .logo-nav-secondary {
     width: 150px;
+    @media only screen
+    and (min-width: $desktop )
+    and (max-width: 1159px){
+      max-width: 80px;
+    }
+    @media (max-width: $mobile){
+      max-width: 110px
+    }
   }
 }
 .navbar-logo {
