--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -109,6 +109,14 @@
   top: 80px;
   left: 30px;
   z-index: 11;
+  @media only screen
+  and (min-width: 992px)
+  and (max-width: 1159px) {
+    position: sticky;
+    top: 84px;
+    left: 30px;
+    z-index: 11;
+  }
    svg {
      width: 100px;
      padding: 10px;
@@ -118,7 +126,7 @@
       width: 50px;
     }
   }
-  @media (max-width: 991px) {
+  @media (max-width: 992px) {
     position: sticky;
     top: 50px;
     left: 10px;
