--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -45,7 +45,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <%= link_to "Mécéner",soutenir_path(anchor: "soutenir1"), class:"dropdown-item text-primary" %>
-          <%= link_to "Témoignager", soutenir_path(anchor: "soutenir4"), class:"dropdown-item text-primary" %>
+          <%= link_to "Témoigner", soutenir_path(anchor: "soutenir4"), class:"dropdown-item text-primary" %>
           <%= link_to "Donner", soutenir_path(anchor: "soutenir2"), class:"dropdown-item text-primary" %>
           <%= link_to "Partager / communiquer", soutenir_path(anchor: "soutenir3"), class:"dropdown-item text-primary" %>
         </div>
