--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -205,13 +205,13 @@
         <figure class="card card-flip">
           <div class="card card-size-small">
             <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("inclure.jpg")%>)">
-              <h3 class="card-title">Inclure vos équipes</h3>
+              <h3 class="card-title">Mobiliser vos équipes</h3>
             </div>
           </div>
 
           <div class="card card-size-small">
             <div class="card-body">
-              <h3 class="card-title">Inclure vos équipes</h3>
+              <h3 class="card-title">Mobiliser vos équipes</h3>
               <div class="card-text text">
                 Le Défi Zéro Déchet des Pro a pour objectif d'impliquer les plus grand nombre des salarié.e.s de votre structure, de générer une réelle <strong>collaboration</strong>. Participer ainsi au projet permet, au sein de chaque structure, d'<strong>agir ensemble</strong>, de <strong>fédérer</strong> et <strong>mobiliser</strong> une équipe autour d'un <strong>projet commun</strong>.
               </div>
