--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -158,3 +158,11 @@ hr {
 .smaller-font {
   font-size: 16px !important;
 }
+
+.text-decoration-none {
+  color: #212529;
+  &:hover {
+    text-decoration: none;
+    color: #212529;
+  }
+}
