page s'inscrire avec nouveau contenu sauf formulaire + mis au propre certaines caractéristiques des li

--- a/app/stylesheets/components/_custom-bullet.scss
+++ b/app/stylesheets/components/_custom-bullet.scss
@@ -10,3 +10,9 @@
 .bullet-secondary li:before {
   color: $secondary;
 }
+
+li {
+  text-align: start;
+  margin-bottom: 8px;
+  margin-top: 8px;
+}
