--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -58,6 +58,7 @@
 }
 //
 .header-padding-comment-image {
+  width: 100%;
     @media (max-width: $tablet) {
       padding-top: 0;
       padding-bottom: 30px;
