homepage en cours, video en place et responsive, pose un problème de marge entre les lignes et la video

--- a/app/stylesheets/components/_headers.scss
+++ b/app/stylesheets/components/_headers.scss
@@ -1,3 +1,18 @@
 h3 {
   font-size: 21px;
 }
+
+.green-bg {
+  background-color: $secondary;
+  color: white;
+  display: inline-block;
+  padding: 5px 18px;
+  margin-bottom: 0;
+}
+
+.green-bg-no-inline {
+  background-color: $secondary;
+  color: white;
+  padding: 5px 18px;
+  margin-bottom: 0;
+}
