change picture carousel- inscription and date in inscription

--- a/app/views/pages/inscription.html.erb
+++ b/app/views/pages/inscription.html.erb
@@ -6,7 +6,7 @@
       <h2 class="mt-5 mb-4 green-bg">Bordeaux Métropole</h2>
       <div class="row">
         <div class="col-lg-6 text d-flex flex-column justify-content-center">
-          <p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez <b>vous inscrire début décembre</b>.</p>
+          <p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez <b>vous inscrire à partir du 19 Novembre 2018</b>.</p>
           <p>D'ici là vous pouvez <b>agir de votre côté</b> ! Voici des exemples de gestes que vous pouvez mettre en place :</p>
           <ul class="list bullet-custom">
             <li class="my-2">
