--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -10,12 +10,12 @@
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "mecenat.jpg", class:"d-block w-100", alt:"Second slide" %>
+      <%= image_tag "inscription.jpg", class:"d-block w-100", alt:"Second slide" %>
       <div class="carousel-caption">
         <div class="d-md-block">
-          <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn box" do %>
-          <h5><b>Le Défi a besoin de vous !</b></h5>
-          <p class="mb-0">Soutenez le projet</p>
+          <%= link_to "/inscription", class:"btn btn-secondary text-white responsive-btn box" do %>
+          <h5><b>Ouverture des inscriptions !</b></h5>
+          <p class="mb-0">19 novembre 2018</p>
           <% end %>
         </div>
       </div>
