--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,7 +55,7 @@
     <hr/>
 
     <div class="video-wrapper">
-      <iframe width="560" height="349" src="https://www.youtube.com/embed/GMPyx0KH22k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="349" src="https://www.youtube.com/embed/ySBLAXtdZUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <hr/>
@@ -77,18 +77,23 @@
     <hr/>
 
     <h2 class="my-5 header text-primary text-center">PARTENAIRES</h2>
-    <div class="row d-flex text-align-center justify-content-center pb-5">
-      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4">
+    <div class="row d-flex text-align-center justify-content-center">
+      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
         <%= link_to "https://www.ademe.fr/", target: :blank do %>
           <%= image_tag "ADEME.png", height: 150 %>
         <% end %>
       </div>
-      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4">
+      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
+        <%= link_to "https://www.cebx.fr/", target: :blank do %>
+          <%= image_tag "region.png", height: 140 %>
+        <% end %>
+      </div>
+      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
         <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
           <%= image_tag "metropole.svg", height: 150 %>
         <% end %>
       </div>
-      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4">
+      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
         <%= link_to "https://www.stop-dechets.fr/territoire-zero-dechets-zero-gaspillage", target: :blank do %>
           <%= image_tag "territoire-ZDZG.svg", height: 150 %>
         <% end %>
@@ -98,13 +103,30 @@
           <%= image_tag "lea-nature.png", width: 130 %>
         <% end %>
       </div>
-      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4">
+    </div>
+
+    <div class="row d-flex text-align-center justify-content-center pb-5">
+      <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
         <%= link_to "https://www.cebx.fr/", target: :blank do %>
           <%= image_tag "club-entreprises.svg", height: 150 %>
         <% end %>
       </div>
+       <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
+        <%= link_to "https://www.cebx.fr/", target: :blank do %>
+          <%= image_tag "CCI.png", width: 130 %>
+        <% end %>
+      </div>
+       <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
+        <%= link_to "https://www.cebx.fr/", target: :blank do %>
+          <%= image_tag "GMAI.png", height: 130 %>
+        <% end %>
+      </div>
+       <div class="col-12 col-sm-4 col-lg-4 text-center mb-4 d-flex align-items-center justify-content-center">
+        <%= link_to "https://www.cebx.fr/", target: :blank do %>
+          <%= image_tag "ecoindustries.png", width: 250 %>
+        <% end %>
+      </div>
     </div>
-
 
 
 
